--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* For debug (delete later) */
+input::placeholder {
+  color: rgb(12, 184, 89);
+}
